<resources>
    <string name="app_name">Library</string>

    <string name="totalCount">총 도서 개수 : </string>
    <string name="search">검색하기</string>
    <string name="search_close">검색어 삭제</string>
    <string name="search_label">검색할 도서 명을 입력하시오</string>
    <string name="available">대출 가능</string>
    <string name="unavailable">대출 불가</string>
    <string name="liked">좋아요</string>
    <string name="liked_dialog_content">좋아요는 로그인 후 이용할 수 있습니다</string>
    <string name="loan_status_dialog_content_before">내일까지 반납해야 할 도서가 %d권 있습니다</string>
    <string name="loan_status_dialog_content_today">오늘까지 반납해야 할 도서가 %d권 있습니다</string>
    <string name="loan_status_dialog_content_overdue">연체된 도서가 %d권 있습니다</string>
    <string name="reservation_turn_dialog_content">예약된 도서의 대출이 가능합니다</string>
    <string name="previous_page">&lt;</string>
    <string name="next_page">&gt;</string>
    <string name="toast_finish">뒤로가기 버튼을 한번 더 누르시면 앱이 종료됩니다</string>

    <string name="back">뒤로 가기</string>
    <string name="see_more">더보기</string>
    <string name="see_less">생략하기</string>
    <string name="call_number">청구기호</string>
    <string name="location">위치</string>
    <string name="book_status">대출 상태</string>
    <string name="expected_return_date">예정 반납일</string>
    <string name="overdue_date">연체일</string>
    <string name="borrow_book">대출하기</string>
    <string name="return_book">반납하기</string>
    <string name="reserve_book">예약하기</string>
    <string name="overdue_dialog_content">연체된 도서가 있습니다. 반납 후 이용해 주시길 바랍니다</string>
    <string name="suspension_dialog_content">연체 만기일 이후에 대출이 가능합니다</string>
    <string name="reservation_dialog_content1">예약자 %d명이 대기하고 있습니다</string>
    <string name="reservation_dialog_content2">정말 예약하시겠습니까?</string>
    <string name="cancel_reservation_book">예약 취소하기</string>
    <string name="most_relatable">공감순</string>
    <string name="newest">최신순</string>
    <string name="comment_upload">댓글 달기</string>
    <string name="thumbUp_comment">댓글 추천</string>

    <string name="most_borrowed">대출순</string>
    <string name="most_liked">좋아요순</string>
    <string name="month">%s</string>
    <string name="ranking_options">순위 옵션 더보기</string>

    <string name="edit_information">정보 수정</string>
    <string name="edit_user_info">회원 정보 수정</string>
    <string name="log_out">로그아웃</string>
    <string name="loan_history">대출 내역</string>
    <string name="loan_status">대출 현황</string>
    <string name="reservation_status">예약 현황</string>
    <string name="liked_list">좋아요 목록</string>
    <string name="unregister">회원 탈퇴</string>
    <string name="no_account">로그인된 계정이 없습니다</string>
    <string name="log_in">로그인</string>
    <string name="register">회원가입</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="input_id">아이디 입력</string>
    <string name="input_password">비밀번호 입력</string>
    <string name="input_name">이름 입력</string>
    <string name="input_age">나이 입력</string>
    <string name="input_email">이메일 입력</string>
    <string name="verify_password">비밀번호 확인</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="current_password">현재 비밀번호 입력</string>
    <string name="new_password">변경 비밀번호 입력</string>
    <string name="confirm_new_password">변경 비밀번호 확인</string>
    <string name="edit">수정</string>
    <string name="confirm">확인</string>
    <string name="find_password">비밀번호를 잊으셨나요?</string>

    <string name="loading_register">회원 가입 중…</string>
    <string name="success_register">회원가입이 완료되었습니다</string>
    <string name="fail_register">회원가입에 실패하였습니다\n잠시 후 다시 시도해주세요</string>
    <string name="loading_signIn">로그인 중…</string>
    <string name="fail_signIn">로그인에 실패하였습니다\n잠시 후 다시 시도해주세요</string>
    <string name="invalid_email">이메일 형식으로 입력해주세요</string>
    <string name="weak_password">비밀번호는 최소 6자 이상이어야 합니다</string>
    <string name="already_email">이미 가입된 이메일입니다\n다른 이메일로 가입해주세요</string>
    <string name="invalid_credential">아이디 또는 비밀번호가 일치하지 않습니다</string>
    <string name="wait">잠시 후 다시 시도해주세요</string>

    <string name="retry_verification">회원가입 된 이메일로 인증 링크를 보냈습니다\n
        해당 링크를 클릭하여 인증을 완료해주세요</string>
    <string name="resend">재전송</string>
    <string name="send_email">이메일을 전송하였습니다</string>

    <string name="already_reauthorization">사용자 인증이 완료되었습니다</string>
    <string name="incorrect_new_password">변경된 비밀번호가 일치하지 않습니다</string>
    <string name="check_password">현재 비밀번호를 입력해주세요</string>
    <string name="success_edit">사용자 정보가 수정되었습니다</string>

    <string name="blank_name">이름을 입력해주세요</string>
    <string name="blank_age">나이를 입력해주세요</string>
    <string name="blank_email">이메일을 입력해주세요</string>
    <string name="blank_password">비밀번호를 입력해주세요</string>
    <string name="invalid_password">비밀번호가 일치하지 않습니다</string>

    <string name="index">순번</string>
    <string name="title">제목</string>
    <string name="author">저자</string>
    <string name="loan_date">대출일</string>
    <string name="return_date">반납일</string>
    <string name="status">상태</string>
    <string name="returned">반납\n완료</string>
    <string name="borrowed">대출 중</string>
    <string name="overdue">연체</string>
    <string name="borrowed_book">대출 도서</string>
    <string name="number_of_overdue_book">연체 권수</string>
    <string name="suspension_end">대출 정지\n 만기일</string>
    <string name="reservation_date">예약일</string>
    <string name="reservation_rank">예약 순위</string>
    <string name="is_reserved">예약\n여부</string>
    <string name="cancel_reservation">예약\n취소</string>
    <string name="reserved">예약 중</string>
    <string name="empty_bookmark">책을 추가하여 나만의 서재를 완성해보세요</string>

    <string name="unregister_dialog_content">회원 탈퇴를 원하시면 비밀번호 입력 후\n 확인 버튼을 눌러주세요</string>
    <string name="id">아이디 : %s</string>
    <string name="cancel">취소</string>

    <string name="find_password_dialog_title">비밀번호 재설정</string>
    <string name="find_password_dialog_content">가입했던 이메일을 입력하시면
        재설정 할 수 있는 링크를 보내드립니다</string>

    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation_rail">Navigation Rail</string>
    <string name="navigation_bottom">Navigation Bottom</string>

    <string name="book">책목록</string>
    <string name="ranking">순위</string>
    <string name="setting">설정</string>

    <string name="load_data_error">데이터 로딩 중 오류 발생</string>
    <string name="loading">로딩 중</string>
    <string name="error">로딩 실패</string>
    <string name="retry">재시도</string>

    <string name="test_itemCount">total book count </string>
    <string name="test_list">list</string>
    <string name="test_check_like_dialog">CheckLikedDialog</string>
    <string name="test_back">back</string>
    <string name="test_pageNum">page</string>
    <string name="test_noMember">no member</string>
    <string name="test_register">register</string>
    <string name="test_register_button">register button</string>
    <string name="test_register_name">register name</string>
    <string name="test_register_age">register age</string>
    <string name="test_register_email">register email</string>
    <string name="test_register_password">register password</string>
    <string name="test_register_verification_password">register verification password</string>
    <string name="test_not_verification">not verification</string>
    <string name="test_resend">resend</string>
    <string name="test_logIn">log in</string>
    <string name="test_logIn_email">logIn email</string>
    <string name="test_logIn_password">logIn password</string>
    <string name="test_logIn_reauthorization">logIn reauthorization</string>
    <string name="test_logIn_find_password">logIn find password</string>
    <string name="test_logIn_find_password_email">logIn find password email</string>
    <string name="test_logIn_find_password_confirm">logIn find password confirm</string>
    <string name="test_logOut">log out</string>
    <string name="test_unregister">unregister</string>
    <string name="test_unregister_email">unregister email</string>
    <string name="test_unregister_password">unregister password</string>
    <string name="test_unregister_confirm">unregister confirm</string>
    <string name="test_account_name">name</string>
    <string name="test_account_edit">edit</string>
    <string name="test_account_edit_name">edit name</string>
    <string name="test_account_edit_gender">edit gender</string>
    <string name="test_account_edit_age">edit age</string>
    <string name="test_account_edit_current_password">edit current password</string>
    <string name="test_account_edit_current_password_button">edit current password button</string>
    <string name="test_account_edit_new_password">edit new password</string>
    <string name="test_account_edit_confirm_new_password">edit confirm new password</string>
    <string name="test_account_edit_confirm_button">edit confirm button</string>
</resources>